Add some OG tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="CurseForge Analytics" />
+    <meta
+      property="og:description"
+      content="Visualize your CurseForge analytics export from your browser!"
+    />
+    <meta
+      property="og:image"
+      content="https://antoinegag.github.io/curseforge-analytics-viewer/banner.png"
+    />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Visualize your CurseForge analytics export from your browser!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
